fix package.json to fit in new folder structure

--- a/_server/package.json
+++ b/_server/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "node-fetch": "^2.2.0"
   },
+  "main": "handler.js",
   "scripts": {
     "start": "serverless offline start",
     "build": "serverless deploy",
