--- a/_server/package.json
+++ b/_server/package.json
@@ -2,6 +2,7 @@
   "name": "messenger-scrapper",
   "version": "0.1.0",
   "dependencies": {
+    "lodash": "^4.17.10",
     "node-fetch": "^2.2.0"
   },
   "main": "handler.js",
