new script: build:prod

--- a/_server/package.json
+++ b/_server/package.json
@@ -8,7 +8,9 @@
   "main": "handler.js",
   "scripts": {
     "start": "serverless offline start",
-    "build": "serverless deploy",
+    "build": "npm run build:dev",
+    "build:prod": "serverless deploy --stage production",
+    "build:dev": "serverless deploy",
     "test": ""
   },
   "devDependencies": {
