add cors in _server

--- a/_server/serverless.yml
+++ b/_server/serverless.yml
@@ -18,6 +18,7 @@ functions:
       - http:
           path: fetch
           method: get
+          cors: true
 
 plugins:
     - serverless-offline
